# OpenGL_Workshop_Resources

./: .gitmodules  CMakeLists.txt  GLengine.code-workspace  README.md
WorkshopPlanning/: planning.txt
cmake/: FindGLFW3.cmake
dependencies/glad/include/glad/: glad.h
dependencies/glad/src/: glad.c
includes/: ElementBuffer.hpp  Shader.hpp  VertexArray.hpp  VertexBuffer.hpp
resources/shaders/: default.vert
src/: ElementBuffer.cpp  Shader.cpp  VertexArray.cpp  VertexBuffer.cpp  end_result.cpp  main.cpp
